fea-rs/test-data/compile-tests/mini-latin/bad/gpos_8a.fea
lookup HI {
 pos b -30;
} HI;

feature test {
    pos a b' lookup HI c' -20;

} test;
